correções no controller de país
